# CDMA-Decoder

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/src/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  SequenceGenerator.cpp  SequenceGenerator.hpp  cdma.hpp  main.cpp
C_optimized/: CMakeLists.txt  gold_sequences.txt  gold_sequences_array.txt
C_optimized/src/: CMakeLists.txt  Decoder.c  Decoder.h  SequenceGenerator.c  SequenceGenerator.h  main.c  stdafx.h
C_unoptimized/: CMakeLists.txt
C_unoptimized/src/: CMakeLists.txt  Decoder.c  Decoder.h  SequenceGenerator.c  SequenceGenerator.h  main.c  stdafx.h
Dokumentation/: make.bat
Dokumentation/compile/: clean.bat  make_bericht.bat  make_titelseite.bat
Dokumentation/ressources/text/: Einleitung.tex  Implementierung.tex  Laufzeitanalyse.tex  Werkzeuge.tex
Dokumentation/src/: Bericht.tex  Praeambel.tex  Titelseite.tex
